rgbds-0.6.1/test/asm/pc-bank.err
error: pc-bank.asm(2):
    Source address $2a00 not between $FF00 to $FFFF
error: pc-bank.asm(11):
    Expected constant expression: Current section's bank is not known
error: Assembly aborted (2 errors)!
